--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tanstack/router-cli": "^1.120.20",
+    "@tanstack/router-plugin": "^1.120.20",
+    "@tanstack/router-vite-plugin": "^1.120.20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
